# passdict

./: README.md  passdicit.py  passdict.py  pyproject.toml
